ResourceBundle con formato UTF-8

--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -4,29 +4,29 @@ menu.file.open = Abrir directorio
 menu.file.exit = Salir
 
 menu.contact = Contacto
-menu.contact.add = Añadir contacto
+menu.contact.add = AÃ±adir contacto
 menu.contact.edit = Editar contacto
 menu.contact.remove = Eliminar contacto
-menu.contact.statistics = Estadísticas
+menu.contact.statistics = EstadÃ­sticas
 
-menu.birthday = Cumpleaños
-menu.birthday.today = Cumpleaños hoy
-menu.birthday.withinweek = Cumpleaños dentro de una semana
-menu.birthday.withinmonth = Cumpleaños dentro de un mes
-menu.birthday.thisweek = Cumpleaños esta semana
-menu.birthday.thismonth = Cumpleaños este mes
+menu.birthday = CumpleaÃ±os
+menu.birthday.today = CumpleaÃ±os hoy
+menu.birthday.withinweek = CumpleaÃ±os dentro de una semana
+menu.birthday.withinmonth = CumpleaÃ±os dentro de un mes
+menu.birthday.thisweek = CumpleaÃ±os esta semana
+menu.birthday.thismonth = CumpleaÃ±os este mes
 
 menu.help = Ayuda
 menu.help.about = Acerca de...
 
-toolbar.categorysearch.tooltip = Categoría
+toolbar.categorysearch.tooltip = CategorÃ­a
 toolbar.search = Buscar
 toolbar.searchtype.type.all = Todos
-toolbar.searchtype.type.category = Categoría
+toolbar.searchtype.type.category = CategorÃ­a
 toolbar.searchtype.type.name = Nombre
-toolbar.searchtype.type.telephone = Teléfono
-toolbar.searchtype.tooltip = Tipo de búsqueda
-toolbar.contactadd.tooltip = Añadir contacto
+toolbar.searchtype.type.telephone = TelÃ©fono
+toolbar.searchtype.tooltip = Tipo de bÃºsqueda
+toolbar.contactadd.tooltip = AÃ±adir contacto
 
 contacts.size = {0} contactos
 
@@ -40,32 +40,32 @@ contact.notes = Notas
 contact.photo.clean = Borrar
 contact.photo.search = Buscar
 
-contact.category = Categorías
-contact.category.add = Añadir categoría
-contact.category.edit = Editar categoría
-contact.category.remove = Eliminar categoría
-contact.category.category = Categoría
+contact.category = CategorÃ­as
+contact.category.add = AÃ±adir categorÃ­a
+contact.category.edit = Editar categorÃ­a
+contact.category.remove = Eliminar categorÃ­a
+contact.category.category = CategorÃ­a
 
-contact.telephone = Teléfonos
-contact.telephone.add = Añadir teléfono
-contact.telephone.edit = Editar teléfono
-contact.telephone.remove = Eliminar teléfono
-contact.telephone.number = Número
+contact.telephone = TelÃ©fonos
+contact.telephone.add = AÃ±adir telÃ©fono
+contact.telephone.edit = Editar telÃ©fono
+contact.telephone.remove = Eliminar telÃ©fono
+contact.telephone.number = NÃºmero
 contact.telephone.type = Tipo
 contact.telephone.tag = Etiqueta
 
-contact.telephone.type.cell = Móvil
+contact.telephone.type.cell = MÃ³vil
 contact.telephone.type.fax = Fax
 contact.telephone.type.home = Casa
-contact.telephone.type.pager = Paginacion
+contact.telephone.type.pager = PaginaciÃ³n
 contact.telephone.type.text = SMS
-contact.telephone.type.textphone = Teléfono de texto
-contact.telephone.type.video = Vídeo
+contact.telephone.type.textphone = telÃ©fono de texto
+contact.telephone.type.video = VÃ­deo
 contact.telephone.type.voice = Voz
 contact.telephone.type.work = Trabajo
 
 contact.email = Emails
-contact.email.add = Añadir email
+contact.email.add = AÃ±adir email
 contact.email.edit = Editar email
 contact.email.remove = Eliminar email
 contact.email.email = Email
@@ -76,14 +76,14 @@ contact.email.type.home = Personal
 contact.email.type.work = Trabajo
 
 contact.address = Direcciones
-contact.address.add = Añadir dirección
-contact.address.edit = Editar dirección
-contact.address.remove = Eliminar dirección
+contact.address.add = AÃ±adir direcciÃ³n
+contact.address.edit = Editar direcciÃ³n
+contact.address.remove = Eliminar direcciÃ³n
 contact.address.street = Calle
 contact.address.locality = Localidad
-contact.address.region = Región
-contact.address.postalcode = Código postal
-contact.address.country = País
+contact.address.region = RegiÃ³n
+contact.address.postalcode = CÃ³digo postal
+contact.address.country = PaÃ­s
 contact.address.type = Tipo
 contact.address.tag = Etiqueta
 
@@ -96,31 +96,31 @@ contact.element.down = Bajar
 contact.save = Guardar
 
 contact.date.format = {2} de {1} de {0}
-contact.age.format = {0} años
-contact.lastedition = Última edición el {0}
+contact.age.format = {0} aÃ±os
+contact.lastedition = Ãšltima ediciÃ³n el {0}
 
 statistics.tab.general = General
 statistics.tab.name = Nombre
-statistics.tab.birthyear = Año de nacimiento
+statistics.tab.birthyear = AÃ±o de nacimiento
 
-statistics.title.text = Característica
+statistics.title.text = CaracterÃ­stica
 statistics.title.value = Cantidad
 statistics.title.percentage = %
 
 statistics.item.total = Total de contactos
-statistics.item.birthday = Número de contactos con cumpleaños
-statistics.item.photo =  Número de contactos con foto
-statistics.item.telephone =  Número de contactos con teléfono
-statistics.item.email =  Número de contactos con email
-statistics.item.address =  Número de contactos con dirección
-statistics.item.category = Número de contactos en categoría: {0}
-statistics.item.uniquetelephone = Número de teléfonos únicos
-statistics.item.uniqueemail = Número de emails únicos
-statistics.item.uniqueaddress = Número de direcciones únicas
+statistics.item.birthday = NÃºmero de contactos con cumpleaÃ±os
+statistics.item.photo =  NÃºmero de contactos con foto
+statistics.item.telephone =  NÃºmero de contactos con telÃ©fono
+statistics.item.email =  NÃºmero de contactos con email
+statistics.item.address =  NÃºmero de contactos con direcciÃ³n
+statistics.item.category = NÃºmero de contactos en categorÃ­a: {0}
+statistics.item.uniquetelephone = NÃºmero de telÃ©fonos Ãºnicos
+statistics.item.uniqueemail = NÃºmero de emails Ãºnicos
+statistics.item.uniqueaddress = NÃºmero de direcciones Ãºnicas
 
 birthday.show = Mostrar
 
-exception.title = Excepción
+exception.title = ExcepciÃ³n
 exception.stacktrace = La stacktrace fue:
 
 month.1 = Ene
