Mostrar apodo en la ficha de contacto

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -32,6 +32,7 @@ contacts.size = {0} contacts
 
 file.open.vcf = Virtual Contact File
 
+contact.nickname = Nickname
 contact.name = Name
 contact.surname = Surname
 contact.fullname = Full name
