--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -32,6 +32,7 @@ contacts.size = {0} contactos
 
 file.open.vcf = Fichero de Contacto Virtual
 
+contact.nickname = Apodo
 contact.name = Nombre
 contact.surname = Apellidos
 contact.fullname = Nombre completo
