Estadísticas del día-mes de nacimiento

--- a/src/main/resources/resourcebundle/MessagesBundle.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle.properties
@@ -103,6 +103,7 @@ contact.lastedition = Last edition on {0}
 statistics.tab.general = General
 statistics.tab.name = Name
 statistics.tab.birthyear = Birth year
+statistics.tab.birthday = Birth day
 
 statistics.title.text = Property
 statistics.title.value = Amonut
@@ -118,6 +119,7 @@ statistics.item.category = Number of contacts in category: {0}
 statistics.item.uniquetelephone = Number of unique telephone number
 statistics.item.uniqueemail = Number of unique email
 statistics.item.uniqueaddress = Number of unique address
+statistics.item.month.day.format = {1} {2}
 
 birthday.show = Show
 
