--- a/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
+++ b/src/main/resources/resourcebundle/MessagesBundle_es_ES.properties
@@ -103,6 +103,7 @@ contact.lastedition = Última edición el {0}
 statistics.tab.general = General
 statistics.tab.name = Nombre
 statistics.tab.birthyear = Año de nacimiento
+statistics.tab.birthday = Día de nacimiento
 
 statistics.title.text = Característica
 statistics.title.value = Cantidad
@@ -118,6 +119,7 @@ statistics.item.category = Número de contactos en categoría: {0}
 statistics.item.uniquetelephone = Número de teléfonos únicos
 statistics.item.uniqueemail = Número de emails únicos
 statistics.item.uniqueaddress = Número de direcciones únicas
+statistics.item.month.day.format = {2} de {1}
 
 birthday.show = Mostrar
 
